--- a/crawl.css
+++ b/crawl.css
@@ -1,16 +1,24 @@
+html{
+    
+}
+
 #board{
+    /*
+    background-color: #d9d2bf;
+    color: #3d3936;
+    */
     white-space:pre-line;
     font-family: monospace;
-    font-size:x-large;
+    font-size:xx-large;
     width:fit-content;
 }
 
 #board:focus{
-    border:1px solid black;
+    border:1px solid #BBBBBB;
 }
 
 #stamina-bar{
-    border:1px solid black;
+    border:1px solid #bbbbbb;
     height:20px;
     width:100px;
 }
@@ -23,7 +31,7 @@
 }
 
 #health-bar{
-    border:1px solid black;
+    border:1px solid #bbbbbb;
     height:20px;
     width:100px;
 }
