--- a/crawl.css
+++ b/crawl.css
@@ -1,6 +1,15 @@
+html{
+    background-color: #222;
+    color: #ddd;
+}
+
 #game-window{
+    background-color: #ddd;
+    color: #222;
     display:flex;
     margin:auto;
+    border:1px solid black;
+    width:fit-content;
 }
 
 #log-window{
@@ -42,8 +51,8 @@
 
 #resources{
     display:flex;
-
-    
+    width:fit-content;
+    margin:auto;
 }
 
 #resources>div{
@@ -82,21 +91,48 @@
     font-family: monospace;
 }
 
-#enemy-control-div{
-    padding:5px;
-    input{
-        width:20px;
-    }
+#controls>div{
+
+    padding:10px;
 
     div{
         padding-bottom:5px;
     }
+    
 }
 
-#weapon-select-div{
-    padding:5px;
+#enemy-control-div{
+    display:none;
+    
+    input{
+        width:20px;
+    }
+
 }
 
 .message-fresh{
-    background-color:rgb(252, 244, 233);
+    background-color:rgba(252, 244, 233, 0.562);
+}
+
+#log-window{
+    display:none;
+}
+
+#resources{
+    display:none;
+}
+
+#weapon-select-div{
+    display:none;
+}
+
+#focus-reminder{
+    display:none;
+    color:blue;
+}
+
+#reminder-wrapper{
+    height:2rem;
+    margin:auto;
+    width:fit-content
 }
