--- a/crawl.css
+++ b/crawl.css
@@ -114,15 +114,11 @@ html{
     background-color:rgba(252, 244, 233, 0.562);
 }
 
-#log-window{
-    display:none;
-}
-
-#resources{
-    display:none;
-}
-
 #weapon-select-div{
+    display:none;
+}
+
+#dungeon-screen{
     display:none;
 }
 
