--- a/crawl.css
+++ b/crawl.css
@@ -132,3 +132,26 @@ html{
     margin:auto;
     width:fit-content
 }
+
+#inventory-wrapper{
+    margin:auto;
+    width:875px;
+}
+
+#inventory{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(auto, auto);
+    
+}
+
+
+.inventory-slot{
+    width:280px;
+    height:120px;
+    border:1px solid #BBBBBB;
+    background-color: #ddd;
+    color: #222;
+
+}
