can equip weapons through inventory

--- a/crawl.css
+++ b/crawl.css
@@ -139,19 +139,56 @@ html{
 }
 
 #inventory{
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(auto, auto);
-    
+    background-color: #ddd;
+    color: #222;
+    display:flex;
+    height:300px;
 }
 
+#inventory-list{
+    width:600px;
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
+    grid-auto-rows: minmax(0px, auto);
+}
 
+.inventory-slot{
+    padding:5px;
+    display:flex;
+    height:fit-content;
+    /*border:1px solid gray*/
+}
+
+.inventory-slot:hover{
+    cursor: pointer;
+    background-color: #bbbbbb;
+}
+
+/*
 .inventory-slot{
     width:280px;
     height:120px;
     border:1px solid #BBBBBB;
     background-color: #ddd;
     color: #222;
+}
+*/
 
+.item-name{
+    font-weight:800;
+    width:fit-content;
+}
+
+.item-equip{
+    margin-left:auto;
+    width:fit-content;
+    height:fit-content;
+}
+
+#inventory-description{
+    outline:1px solid black;
+    margin-left:auto;
+    width:300px;
+    padding:5px;
 }
