--- a/css/town.css
+++ b/css/town.css
@@ -1,4 +1,32 @@
 #town-screen{
+    width:900px;
+    margin:auto;
+    background-color:#ddd;
+    color:#222;
+    padding-bottom:1rem;
+}
+
+#town-title-div{
+    width:fit-content;
+    margin:auto;
+    font-weight:600;
+}
+
+#tavern-wrapper-div{
+    text-align:center;
+    font-weight:600;
+    margin-top:1rem;
+
+    button{
+        margin:5px;
+        padding:5px;
+        
+    }
+}
+
+#tavern-div{
     width:875px;
     margin:auto;
+    border:1px solid black;
+    background-color: rgba(252, 143, 0, 0.164);
 }
