--- a/css/inventory.css
+++ b/css/inventory.css
@@ -1,7 +1,17 @@
 
+#shop{
+    background-color:rgba(252, 143, 0, 0.164);
+}
+
+.inventory-title{
+    font-weight:600;
+    text-align:center;
+}
+
 .inventory-wrapper{
     margin:auto;
     width:875px;
+    margin-top:1rem;
 }
 
 .inventory{
@@ -9,6 +19,7 @@
     color: #222;
     display:flex;
     height:10rem;
+    border:1px solid black;
 }
 
 .inventory-list{
@@ -58,7 +69,7 @@
 }
 
 .fresh-true{
-    background-color: #dfcd9c;
+    background-color: #fdd70052;
 }
 
 .inventory-description{
