--- a/css/hud.css
+++ b/css/hud.css
@@ -1,10 +1,11 @@
 #hud-div{
-    width:875px;
+    width:900px;
     margin:auto;
     margin-bottom:1rem;
     background-color:#ddd;
+    background-image:linear-gradient(#a5a5a5,#ddd);
     color:#222;
-    padding:5px;
+    padding-bottom:5px;
     font-weight:600;
     display:none;
 }
