--- a/crawlJS/css/crawl.css
+++ b/crawlJS/css/crawl.css
@@ -9,7 +9,21 @@ html{
     padding:1rem;
 }
 
+button{
+    color: rgb(15, 12, 0);
+    background-image:linear-gradient(#fde8cc,#a7a089)
+}
 
+button:hover{
+    cursor: pointer;
+    background-image:linear-gradient(#cab9a3,#a7a089)
+
+}
+
+.hint-text{
+    font-weight:300;
+    font-style:italic;
+}
 
 
 
