--- a/crawlJS/css/hud.css
+++ b/crawlJS/css/hud.css
@@ -1,12 +1,17 @@
 #hud-div{
-    width:875px;
+    width:900px;
     margin:auto;
     margin-bottom:1rem;
     background-color:#ddd;
+    background-image:linear-gradient(#a5a5a5,#ddd);
     color:#222;
-    padding:5px;
+    padding-bottom:5px;
     font-weight:600;
     display:none;
+
+    .gold-div{
+        text-align:center;
+    }
 }
 
 #day-div, #nourishment-level-div{
@@ -41,7 +46,7 @@
 }
 
 .resource-level-divs{
-    text-align:center;
+    /*text-align:center;*/
     height:20px;
     width:100px;
     border:1px solid gray;
