--- a/crawlJS/css/inventory.css
+++ b/crawlJS/css/inventory.css
@@ -1,7 +1,17 @@
 
+#shop{
+    background-color:rgba(252, 143, 0, 0.164);
+}
+
+.inventory-title{
+    font-weight:600;
+    text-align:center;
+}
+
 .inventory-wrapper{
     margin:auto;
     width:875px;
+    margin-top:1rem;
 }
 
 .inventory{
@@ -9,6 +19,7 @@
     color: #222;
     display:flex;
     height:10rem;
+    border:1px solid black;
 }
 
 .inventory-list{
@@ -17,18 +28,24 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 0px;
     grid-auto-rows: 2rem;
+    padding-top:2px;
 }
 
 .inventory-slot{
-    padding:5px;
+    padding:4px;
+    margin-left:3px;
     display:flex;
     height:fit-content;
+    background-image: linear-gradient(#ddcaa4,#c0aa73);
+    border: 1px solid rgb(124, 117, 52);
     /*border:1px solid gray*/
 }
 
 .inventory-slot:hover{
     cursor: pointer;
-    background-color: #bbbbbb;
+    background-color: #7272723d;
+    background-image: linear-gradient(#ddcaa4,#aa9665);
+
 }
 
 /*
@@ -58,7 +75,7 @@
 }
 
 .fresh-true{
-    background-color: #dfcd9c;
+    background-color: #fdd70052;
 }
 
 .inventory-description{
