add keyword hints

--- a/css/crawl.css
+++ b/css/crawl.css
@@ -25,5 +25,15 @@ button:hover{
     font-style:italic;
 }
 
+.hint-divs{
+    text-align:center;
+    /*font-style:italic;*/
+    color:#ddd;
+
+    p{
+        margin:0px;
+    }
+}
+
 
 
